# respond

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Doxyfile  Doxyfile.in  README.md  RESPOND.cpp  annotated.html  annotated_dup.js  bitbucket-pipelines.yml  bootstrap.sh  build.sh  classes.html  compose.debug.yaml  compose.yaml  conan-build.sh  conanfile.py  conanfile.txt  custom.css  debug-conanbuild.bat  debug-conanbuild.sh  delete_and_build_python.sh  dir_248832ff8517b5b7d5da1a6bc8750d99.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_70501f13f5c9277fdfc6ec16bf603df6.html  dir_70501f13f5c9277fdfc6ec16bf603df6.js  dir_70501f13f5c9277fdfc6ec16bf603df6_dep.map  dir_70501f13f5c9277fdfc6ec16bf603df6_dep.md5  dir_b2c0019c147599373b22861bc73df903.html  dir_b2c0019c147599373b22861bc73df903.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dac038285cf441957e9730d8fb44af17.html  dir_dd69c4b9b805df1e7e0e532369e14982.html  dir_dd69c4b9b805df1e7e0e532369e14982.js  dir_dd69c4b9b805df1e7e0e532369e14982_dep.map  (+42 more)
api/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt
benchmark/src/: BENCHMARK_respond.cpp
extras/py_synmodels/: CMakeLists.txt  py_SynModels.cpp
extras/py_synmodels/data/: CMakeLists.txt  py_Data.cpp  py_Data.hpp
extras/pybindings/: CMakeLists.txt  Matrixify_ext.cpp  Simrunner_ext.cpp  data_ops_ext.cpp  model_ext.cpp  respond.cpp
extras/respondpy/: CMakeLists.txt  respondpy.cpp
src/: CMakeLists.txt  CMakeUserPresets.json  Glossary.md  Helpers.hpp  README.md  Simulation.cpp  Simulation.hpp  background.cpp  behavior.cpp  c_api.cpp  config.h.in  intervention.cpp  logging.cpp  main.cpp  markov.cpp  migration.cpp  overdose.cpp  py_SynModels.cpp  respond.cpp  respondsimulation.cpp  synmodels.cpp  transition_factory.cpp
src/Controller/: CMakeLists.txt  DataLoader.cpp  DataLoader.hpp  DataTypes.hpp  DataWriter.cpp  DataWriter.hpp  configuration.cpp  configuration.hpp
src/Model/: CMakeLists.txt  Calibration.cpp  Calibration.hpp  Simulation.cpp  Simulation.hpp
src/api/: CMakeLists.txt  api.cpp  main.cpp
src/api/include/: api.hpp
src/data/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  CostLoader.cpp  CostLoader.hpp  DataFormatter.cpp  DataLoader.cpp  DataLoader.hpp  DataTypes.cpp  DataTypes.hpp  DataWriter.cpp  DataWriter.hpp  EigenFactory.cpp  Loader.cpp  Loader.hpp  Matrix3dFactory.cpp  Matrix3dPrinter.cpp  MatrixXdFactory.cpp  RespondDataBlock.cpp  RespondDataStore.cpp  RespondDataStoreImpl.hpp  Tensor3dFactory.cpp  UtilityLoader.cpp  UtilityLoader.hpp  configuration.cpp  configuration.hpp  py_Data.cpp
src/data_ops/: BaseLoader.cpp  CostLoader.cpp  DataFormatter.cpp  DataLoader.cpp  DataTypes.cpp  Matrix3dFactory.cpp  Matrix3dPrinter.cpp  UtilityLoader.cpp  Writer.cpp  cost_loader.cpp  data_formatter.cpp  data_loader.cpp  utility_loader.cpp  writer.cpp
src/internals/: background.hpp  behavior.hpp  intervention.hpp  logging_internals.hpp  markov.hpp  markov_internals.hpp  migration.hpp  overdose.hpp  transition_base.hpp
src/kernels/: CMakeLists.txt  StateTransitionModel.cpp  StateTransitionModelImpl.hpp  py_Kernels.cpp
src/matrixify/: BaseLoader.cpp  CMakeLists.txt  Configuration.cpp  CostLoader.cpp  DataFormatter.cpp  DataLoader.cpp  DataTypes.cpp  DataWriter.cpp  Loader.cpp  Matrix3dFactory.cpp  Matrix3dPrinter.cpp  UtilityLoader.cpp  Writer.cpp
src/model/: CMakeLists.txt  CostCalculator.cpp  CostCalculator.hpp  PostSimulationCalculator.cpp  Simulation.cpp  Simulation.hpp  StateTransitionModel.cpp  markov.cpp  simulation.cpp
src/models/: CMakeLists.txt  Respond.cpp  RespondImpl.hpp  py_Models.cpp
src/postprocess/: writer.cpp
src/preprocess/: cost_loader.cpp  data_formatter.cpp  data_loader.cpp  utility_loader.cpp
src/pybindings/: CMakeLists.txt  Matrixify_ext.cpp  Simrunner_ext.cpp
src/simrunner/: CMakeLists.txt  PostSimulationCalculator.cpp  Simulation.cpp
src/simulation/: CMakeLists.txt  PostSimulationCalculator.cpp  Respond.cpp  Simulation.cpp
src/utilities/: CMakeLists.txt  Matrix3dFactory.cpp  Matrix3dFactory.hpp  Matrix3dPrinter.cpp
src/utils/: logging.cpp
test/: CMakeLists.txt  ConfigurationTest.cpp  DataLoaderTest.cpp  DataLoaderTests.cpp  DataWriterTest.cpp  SimulationTest.cpp
test/TestInput/: simple.csv
test/mocks/: MockConfiguration.hpp  MockCostLoader.hpp  MockData.hpp  MockDataLoader.hpp  MockSimulation.hpp  MockUtilityLoader.hpp
test/src/: TEST_BaseLoader.cpp  TEST_CostLoader.cpp  TEST_DataLoader.cpp  TEST_InputWriter.cpp  TEST_PostSimulationCalculator.cpp  TEST_Writer.cpp
tests/: CMakeLists.txt  markov_test.cpp  respond_test.cpp
tests/constants/: config.hpp
tests/integration/: c_api_test.cpp  respond_test.cpp
tests/mocks/: MockConfiguration.hpp  MockCostLoader.hpp  MockDataLoader.hpp  MockSimulation.hpp  MockUtilityLoader.hpp  RespondDataStoreMock.hpp  RespondMock.hpp  StateTransitionModelMock.hpp  cost_loader_mock.hpp  data_formatter_mock.hpp  data_loader_mock.hpp  expected_strings.hpp  markov_mock.hpp  model_mock.hpp  respond_mock.hpp  transition_mock.hpp  utility_loader_mock.hpp  writer_mock.hpp
tests/src/: ConfigurationTest.cpp  CostLoaderTest.cpp  DataLoaderTest.cpp  DataWriterTest.cpp  PostSimulationCalculatorTest.cpp  RespondDataStoreTest.cpp  RespondTest.cpp  SimulationTest.cpp  StateTransitionModelTest.cpp  TEST_BaseLoader.cpp  TEST_CostLoader.cpp  TEST_DataLoader.cpp  TEST_InputWriter.cpp  TEST_PostSimulationCalculator.cpp  TEST_Simulation.cpp  TEST_UtilityLoader.cpp  TEST_Writer.cpp  UtilityLoaderTest.cpp  cost_effectiveness_test.cpp  cost_loader_test.cpp  data_formatter_test.cpp  data_loader_test.cpp  logging_test.cpp  markov_test.cpp  matrices_test.cpp  post_sim_test.cpp  respond_test.cpp  simulation_test.cpp  utility_loader_test.cpp  writer_test.cpp
tests/unit/: background_test.cpp  behavior_test.cpp  cost_effectiveness_test.cpp  history_test.cpp  intervention_test.cpp  logging_test.cpp  markov_test.cpp  migration_test.cpp  overdose_test.cpp  simulation_test.cpp
tools/benchmark/: CMakeLists.txt
(+501 files in other folders)
