[build-system]
requires = ["scikit-build-core", "pybind11", "eigen", "spdlog"]
build-backend = "scikit_build_core.build"

[project]
name = "respondpy"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Matthew Carroll", email = "Matthew.Carroll@bmc.org" },
    { name = "Dimitri Baptiste", email = "Dimitri.Baptiste@bmc.org" },
]
maintainers = [{ name = "Syndemics Lab", email = "Benjamin.Linas@bmc.org" }]
license = { text = "GNU AGPLv3" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/SyndemicsLab/RESPONDSimulationv2"
Issues = "https://github.com/SyndemicsLab/RESPONDSimulationv2/issues"

[tool.scikit-build]
cmake.version = ">=3.27"
sdist.exclude = [
    ".github",
    "docs",
    "tests",
    "benchmarks",
    "executable",
    "tools",
]
wheel.packages = ["extras/python/respond"]

[tool.scikit-build.cmake.define]
RESPOND_BUILD_PIC = "ON"
RESPOND_BUILD_PYBINDINGS = "ON"
RESPOND_BUILD_TESTS = "OFF"
RESPOND_BUILD_EXECUTABLE = "OFF"
